--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="main-content">
+        <div class="body">
+          <!-- Logo -->
+          <a href="#"><img src="./img/Logo.svg" alt="Lesson" /></a>
+          <!-- Navigation:Thanh dieu huong -->
+          <nav>
+            <li><a class="active" href="#">Home</a></li>
+            <li><a href="#">Courses</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Reviews</a></li>
+          </nav>
+
+          <!-- Call to action button -->
+          <a href="#" class="btn btn-sign-up">Sign up</a>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
