--- a/index.html
+++ b/index.html
@@ -32,5 +32,154 @@
         </div>
       </div>
     </header>
+
+    <section class="hero">
+      <div class="main-content">
+        <div class="left-box">
+          <img src="./img/guy-lesson 1.jpg" alt="Guy Lesson" />
+          <div class="summary">
+            <div class="item">
+              <img src="./img/Group 17525.svg" alt="UI/UX Design" />
+              <div class="course-content">
+                <span>20 Courses</span>
+                <span>UI/UX Design</span>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./img/Group 17524.svg" alt="Development" />
+              <div class="course-content">
+                <span>20 Courses</span>
+                <span>Development</span>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./img/Group 17523.svg" alt="Marketing" />
+              <div class="course-content">
+                <span>20 Courses</span>
+                <span>Marketing</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="right-box">
+          <h1>Learn without limits and spread knowledge.</h1>
+          <p class="desc">
+            Build new skills for that “this is my year” feeling with courses,
+            certificates, and degrees from world-class universities and
+            companies.
+          </p>
+          <div class="call-to-action">
+            <a href="" class="btn btn-see-courses">See Courses</a>
+            <button class="btn-watch-video">
+              <img src="./img/Group 17513.svg" alt="Watch Video" />
+              <span>Watch Video</span>
+            </button>
+          </div>
+          <span class="recent-engagement">Recent engagement</span>
+          <div class="stats">
+            <div class="item">
+              <strong class="number">50K</strong>
+              <span>Students</span>
+            </div>
+            <div class="item">
+              <strong class="number">70+</strong>
+              <span>Courses</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
+  <body>
+    <section class="courses-section">
+      <div class="courses-inner">
+        <div class="courses-header">
+          <div class="courses-title-group">
+            <h2>Our popular courses</h2>
+            <p>
+              Build new skills with new trendy courses and shine for the next
+              future career.
+            </p>
+          </div>
+
+          <div class="courses-nav">
+            <img src="./img/Icons.svg" alt="next-button" />
+          </div>
+        </div>
+        <div class="courses-list">
+          <!-- Card 1 -->
+          <article class="course-card">
+            <div class="course-thumb">
+              <img src="./img/Image.jpg" alt="Basic web design" />
+            </div>
+
+            <div class="course-body">
+              <div class="course-title-row">
+                <h3 class="course-title">Basic web design</h3>
+                <div class="course-rating">&#9733; <span>4.5</span></div>
+              </div>
+
+              <p class="course-desc">
+                Get the best course, gain knowledge and shine for your future
+                career.
+              </p>
+
+              <div class="course-footer">
+                <div class="course-price">$120.75</div>
+                <button class="course-btn">Book Now</button>
+              </div>
+            </div>
+          </article>
+
+          <!-- Card 2 -->
+          <article class="course-card">
+            <div class="course-thumb">
+              <img src="./img/Image (1).jpg" alt="UI/UX design" />
+            </div>
+
+            <div class="course-body">
+              <div class="course-title-row">
+                <h3 class="course-title">UI/UX design</h3>
+                <div class="course-rating">&#9733; <span>4.5</span></div>
+              </div>
+
+              <p class="course-desc">
+                Get the best course, gain knowledge and shine for your future
+                career.
+              </p>
+
+              <div class="course-footer">
+                <div class="course-price">$120.75</div>
+                <button class="course-btn course-btn--dark">Book Now</button>
+              </div>
+            </div>
+          </article>
+
+          <!-- Card 3 -->
+          <article class="course-card">
+            <div class="course-thumb">
+              <img src="./img/Image (2).jpg" alt="Web App design" />
+            </div>
+
+            <div class="course-body">
+              <div class="course-title-row">
+                <h3 class="course-title">Web App design</h3>
+                <div class="course-rating">&#9733; <span>4.5</span></div>
+              </div>
+
+              <p class="course-desc">
+                Get the best course, gain knowledge and shine for your future
+                career.
+              </p>
+
+              <div class="course-footer">
+                <div class="course-price">$120.75</div>
+                <button class="course-btn course-btn--dark">Book Now</button>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
